Name:                freetype2
Version:             2.5.3.0
Synopsis:            Haskell binding for FreeType 2 library
Description:         Wrapper around FreeType 2 library.  Relevant
                     exerpts from the FreeType 2 website:
                     .
                     What is FreeType 2?
                     .
                     FreeType 2 is a software font engine that is
                     designed to be small, efficient, highly
                     customizable, and portable while capable of
                     producing high-quality output (glyph images). It
                     can be used in graphics libraries, display
                     servers, font conversion tools, text image
                     generation tools, and many other products as
                     well.
                     .
                     The following is a non-exhaustive list of
                     features provided by FreeType 2.
                     .
                     * FreeType 2 provides a simple and easy-to-use
                     API to access font content in a uniform way,
                     independently of the file format. Additionally,
                     some format-specific APIs can be used to access
                     special data in the font file.
                     .
                     * Unlike most comparable libraries, FreeType 2
                     supports scalable font formats like TrueType or
                     Type 1 natively and can return the outline data
                     (and control instructions/hints) to client
                     applications.
                     .
                     By default, FreeType 2 supports the following
                     font formats.
                     .
                     * TrueType fonts (and collections)
                     .
                     * Type 1 fonts
                     .
                     * CID-keyed Type 1 fonts
                     .
                     * CFF fonts
                     .
                     * OpenType fonts (both TrueType and CFF variants)
                     .
                     * SFNT-based bitmap fonts
                     .
                     * X11 PCF fonts
                     .
                     * Windows FNT fonts
                     .
                     * BDF fonts (including anti-aliased ones)
                     .
                     * PFR fonts
                     .
                     * Type 42 fonts (limited support)
                     .
                     From a given glyph outline, FreeType 2 is capable
                     of producing a high-quality monochrome bitmap, or
                     anti-aliased pixmap, using 256 levels of
                     'gray'. This is much better than the 5 levels
                     used by Windows 9x\/98\/NT\/2000 or FreeType 1.
                     .
                     FreeType 2 supports all the character mappings
                     defined by the TrueType and OpenType
                     specification. It is also capable of
                     automatically synthetizing a Unicode charmap from
                     Type 1 fonts, which puts an end to the painful
                     'encoding translation' headache common with this
                     format (of course, original encodings are also
                     available in the case where you need them).
                     .
                     The FreeType 2 core API provides simple functions
                     to access advanced information like glyph names
                     or kerning data.
                     .
                     FreeType 2 provides information that is often not
                     available from other similar font engines, like
                     kerning distances, glyph names, vertical metrics,
                     etc.
                     .
                     FreeType 2 provides its own caching subsystem
                     since release 2.0.1. It can be used to cache
                     either face instances or glyph images
                     efficiently.
License:             BSD3
License-file:        LICENSE
Author:              Jason Dagit <dagitj@gmail.com>
Maintainer:          Jason Dagit <dagitj@gmail.com>
Copyright:           Copyright Jason Dagit 2011
Category:            Graphics
Build-type:          Simple
Extra-source-files:  objs/ftmodule.h
                     harfbuzz/src/*.hh
                     harfbuzz/src/*.cc
                     harfbuzz/src/*.h
                     include/*.h
                     include/internal/*.h
                     include/internal/services/*.h
                     src/autofit/*.h
                     src/autofit/*.c
                     src/base/*.h
                     src/base/*.c
                     src/bdf/*.h
                     src/bdf/*.c
                     src/truetype/*.h
                     src/truetype/*.c
                     src/type1/*.h
                     src/type1/*.c
                     src/cff/*.h
                     src/cff/*.c
                     src/cid/*.h
                     src/cid/*.c
                     src/pfr/*.h
                     src/pfr/*.c
                     src/type42/*.h
                     src/type42/*.c
                     src/winfonts/*.h
                     src/winfonts/*.c
                     src/pcf/*.h
                     src/pcf/*.c
                     src/bdf/*.h
                     src/bdf/*.c
                     src/sfnt/*.h
                     src/sfnt/*.c
                     src/autofit/*.h
                     src/autofit/*.c
                     src/pshinter/*.h
                     src/pshinter/*.c
                     src/raster/*.h
                     src/raster/*.c
                     src/smooth/*.h
                     src/smooth/*.c
                     src/cache/*.h
                     src/cache/*.c
                     src/gzip/*.h
                     src/gzip/*.c
                     src/lzw/*.h
                     src/lzw/*.c
                     src/psaux/*.h
                     src/psaux/*.c
                     src/psnames/*.h
                     src/psnames/*.c

Cabal-version:       >=1.20

Executable test
  default-language: Haskell2010
  build-depends:
    base, freetype2, JuicyPixels, bytestring
  main-is: test-harfbuzz.hs
  ghc-options: 
             dist/build/harfbuzz/src/hb-blob.o
             dist/build/harfbuzz/src/hb-buffer.o
             dist/build/harfbuzz/src/hb-buffer-serialize.o
             dist/build/harfbuzz/src/hb-common.o
             dist/build/harfbuzz/src/hb-face.o
             dist/build/harfbuzz/src/hb-font.o
             dist/build/harfbuzz/src/hb-ft.o
             dist/build/harfbuzz/src/hb-unicode.o
             dist/build/harfbuzz/src/hb-shape.o
             dist/build/harfbuzz/src/hb-set.o
             dist/build/harfbuzz/src/hb-shaper.o
             dist/build/harfbuzz/src/hb-shape-plan.o
             dist/build/harfbuzz/src/hb-warning.o

             dist/build/src/base/ftsystem.o
             dist/build/src/base/ftdebug.o
             dist/build/src/base/ftinit.o
             dist/build/src/base/ftbase.o
             dist/build/src/base/ftbbox.o
             dist/build/src/base/ftbdf.o
             dist/build/src/base/ftbitmap.o
             dist/build/src/base/ftcid.o
             dist/build/src/base/ftfstype.o
             dist/build/src/base/ftgasp.o
             dist/build/src/base/ftglyph.o
             dist/build/src/base/ftgxval.o
             dist/build/src/base/ftlcdfil.o
             dist/build/src/base/ftmm.o
             dist/build/src/base/ftotval.o
             dist/build/src/base/ftpatent.o
             dist/build/src/base/ftpfr.o
             dist/build/src/base/ftstroke.o
             dist/build/src/base/ftsynth.o
             dist/build/src/base/fttype1.o
             dist/build/src/base/ftwinfnt.o
             dist/build/src/base/ftxf86.o

             dist/build/src/truetype/truetype.o
             dist/build/src/type1/type1.o
             dist/build/src/cff/cff.o
             dist/build/src/cid/type1cid.o
             dist/build/src/pfr/pfr.o
             dist/build/src/type42/type42.o
             dist/build/src/winfonts/winfnt.o
             dist/build/src/pcf/pcf.o
             dist/build/src/bdf/bdf.o
             dist/build/src/sfnt/sfnt.o
             dist/build/src/autofit/autofit.o
             dist/build/src/pshinter/pshinter.o
             dist/build/src/raster/raster.o
             dist/build/src/smooth/smooth.o
             dist/build/src/cache/ftcache.o
             dist/build/src/gzip/ftgzip.o
             dist/build/src/lzw/ftlzw.o
             dist/build/src/psaux/psaux.o
             dist/build/src/psnames/psmodule.o

Library
  default-language: Haskell2010
  default-extensions:
    ForeignFunctionInterface
  Build-tools: hsc2hs

  Build-depends: base > 3, 
                 bindings-DSL

  -- Modules exported by the library.
  Exposed-modules: Graphics.Rendering.FreeType.Internal
                   Graphics.Rendering.FreeType.Internal.BBox
                   Graphics.Rendering.FreeType.Internal.Bitmap
                   Graphics.Rendering.FreeType.Internal.BitmapGlyph
                   Graphics.Rendering.FreeType.Internal.BitmapSize
                   Graphics.Rendering.FreeType.Internal.CharMap
                   Graphics.Rendering.FreeType.Internal.Driver
                   Graphics.Rendering.FreeType.Internal.Face
                   Graphics.Rendering.FreeType.Internal.FaceType
                   Graphics.Rendering.FreeType.Internal.Generic
                   Graphics.Rendering.FreeType.Internal.Glyph
                   Graphics.Rendering.FreeType.Internal.GlyphMetrics
                   Graphics.Rendering.FreeType.Internal.GlyphSlot
                   Graphics.Rendering.FreeType.Internal.Library
                   Graphics.Rendering.FreeType.Internal.Matrix
                   Graphics.Rendering.FreeType.Internal.Memory
                   Graphics.Rendering.FreeType.Internal.Module
                   Graphics.Rendering.FreeType.Internal.OpenArgs
                   Graphics.Rendering.FreeType.Internal.Outline
                   Graphics.Rendering.FreeType.Internal.OutlineGlyph
                   Graphics.Rendering.FreeType.Internal.Parameter
                   Graphics.Rendering.FreeType.Internal.PrimitiveTypes
                   Graphics.Rendering.FreeType.Internal.RasterParams
                   Graphics.Rendering.FreeType.Internal.Renderer
                   Graphics.Rendering.FreeType.Internal.Size
                   Graphics.Rendering.FreeType.Internal.SizeMetrics
                   Graphics.Rendering.FreeType.Internal.SizeRequest
                   Graphics.Rendering.FreeType.Internal.Stream
                   Graphics.Rendering.FreeType.Internal.Span
                   Graphics.Rendering.FreeType.Internal.SubGlyph
                   Graphics.Rendering.FreeType.Internal.Vector

                   Bindings.Harfbuzz.Hb
                   Bindings.Harfbuzz.HbBlob
                   Bindings.Harfbuzz.HbBuffer
                   Bindings.Harfbuzz.HbCommon
                   Bindings.Harfbuzz.HbFace
                   Bindings.Harfbuzz.HbFont
                   Bindings.Harfbuzz.HbFt
                   Bindings.Harfbuzz.HbSet
                   Bindings.Harfbuzz.HbShape
                   Bindings.Harfbuzz.HbUnicode
                   Bindings.Harfbuzz.HbVersion
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    


  -- Modules not exported by this package.
  -- Other-modules:       

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  x-cc-name: g++
  Build-tools: hsc2hs
  ghc-options: -Wall
  include-dirs: objs include include/config
                include/
                src/base
                src/truetype
                src/type1
                src/cff
                src/cid
                src/pfr
                src/type42
                src/winfonts
                src/pcf
                src/bdf
                src/sfnt
                src/autofit
                src/pshinter
                src/raster
                src/smooth
                src/cache
                src/gzip
                src/lzw
                src/psaux
                src/psnames
                harfbuzz/src
                ./

  cc-options: -DFT_CONFIG_CONFIG_H=<ftconfig.h>
              -DFT2_BUILD_LIBRARY
              -DFT_CONFIG_MODULES_H=<ftmodule.h>
              -DDARWIN_NO_CARBON
              -DHAVE_CONFIG
              -fno-exceptions
              -fno-rtti
              -fPIC -DPIC

  c-sources:
             src/base/ftsystem.c
             src/base/ftdebug.c
             src/base/ftinit.c
             src/base/ftbase.c
             src/base/ftbbox.c
             src/base/ftbdf.c
             src/base/ftbitmap.c
             src/base/ftcid.c
             src/base/ftfstype.c
             src/base/ftgasp.c
             src/base/ftglyph.c
             src/base/ftgxval.c
             src/base/ftlcdfil.c
             src/base/ftmm.c
             src/base/ftotval.c
             src/base/ftpatent.c
             src/base/ftpfr.c
             src/base/ftstroke.c
             src/base/ftsynth.c
             src/base/fttype1.c
             src/base/ftwinfnt.c
             src/base/ftxf86.c
             src/truetype/truetype.c
             src/type1/type1.c
             src/cff/cff.c
             src/cid/type1cid.c
             src/pfr/pfr.c
             src/type42/type42.c
             src/winfonts/winfnt.c
             src/pcf/pcf.c
             src/bdf/bdf.c
             src/sfnt/sfnt.c
             src/autofit/autofit.c
             src/pshinter/pshinter.c
             src/raster/raster.c
             src/smooth/smooth.c
             src/cache/ftcache.c
             src/gzip/ftgzip.c
             src/lzw/ftlzw.c
             src/psaux/psaux.c
             src/psnames/psmodule.c

             harfbuzz/src/hb-blob.cc
             harfbuzz/src/hb-buffer.cc
             harfbuzz/src/hb-buffer-serialize.cc
             harfbuzz/src/hb-common.cc
             harfbuzz/src/hb-face.cc
             harfbuzz/src/hb-font.cc
             harfbuzz/src/hb-ft.cc
             harfbuzz/src/hb-unicode.cc
             harfbuzz/src/hb-set.cc
             harfbuzz/src/hb-shape.cc
             harfbuzz/src/hb-shaper.cc
             harfbuzz/src/hb-shape-plan.cc
             harfbuzz/src/hb-warning.cc

source-repository head
  type: git
  location: git://github.com/dagit/freetype2.git

